# tgpingerbot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  config.rs  lib.rs  main.rs  storage.rs  utils.rs
src/storage/: v01.rs
